# zip-here

./: index.html  package-lock.json  package.json  pnpm-lock.yaml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs
src-tauri/src/comde/: mod.rs  z_7zip.rs  z_bzip2.rs  z_gzip.rs  z_tar.rs  z_xz.rs  z_zip.rs  z_zstd.rs
src/components/: Card.vue  CardButton.vue  FileDragInputBox.vue  NavBar.vue  RadioGroup.vue
src/i18n/: en.ts  index.ts  langKeys.ts  type.ts  zh-CN.ts
src/routers/: index.ts
src/stores/: appStore.ts
src/utils/: index.ts  tauri-api.ts
src/views/: Compress.vue  Decompress.vue  Home.vue  Options.vue
src/views/options/: About.vue  Formats.vue  General.vue
