[package]
name = "ziphere"
version = "0.1.0"
description = "A Application for compression and decompression"
authors = ["zxzxovo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ziphere_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
zip = "2.6.1"
tar = "0.4.44"
flate2 = "1.1.1"
sevenz-rust2 = { version = "0.13", features = ["compress"] }
bzip2 = "0.4.4"
xz2 = "0.1.7"
zstd = "0.13.0"
chrono = "0.4.35"
